TestCases/invalid-graphs/tex/NotSupportedGlobalProperties_1.tex
\begin{tikzpicture}
    [scale=.8,auto=center,every unsupported/.style={circle,fill=black!60,inner sep=1pt}]
    \draw (13.5,7) notsupported (1.5cm and 0.7cm);
\end{tikzpicture}
